[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/monochrome_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/DefaultFont8.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/lifebar_frame.png" type="Texture" id=3]
[ext_resource path="res://assets/lifebar_content.png" type="Texture" id=4]
[ext_resource path="res://interface/UI.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 352, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 464, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 672, 192, 16, 16 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 48.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueLifeBar" type="Control" parent="Top"]
margin_left = 8.0
margin_top = 4.0
margin_right = 48.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Top/BlueLifeBar"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 17.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 2 )
text = "Blue"

[node name="TextureProgress" type="TextureProgress" parent="Top/BlueLifeBar"]
anchor_left = 0.8
anchor_right = 4.6
margin_left = 20.0
margin_right = 60.0
margin_bottom = 40.0
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.12549, 0.12549, 0.752941, 1 )

[node name="RedLifeBar" type="Control" parent="Top"]
margin_left = 8.0
margin_top = 28.0
margin_right = 48.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Top/RedLifeBar"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 17.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 2 )
text = "Purple"

[node name="TextureProgress" type="TextureProgress" parent="Top/RedLifeBar"]
anchor_left = 0.8
anchor_right = 4.6
margin_left = 20.0
margin_right = 60.0
margin_bottom = 40.0
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.64, 0.12, 0.64, 1 )

[node name="Bottom" type="ColorRect" parent="."]
margin_top = 192.0
margin_right = 256.0
margin_bottom = 240.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyContainer" type="Control" parent="Bottom"]
margin_right = 48.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyIcon" type="TextureRect" parent="Bottom/MoneyContainer"]
self_modulate = Color( 0.752941, 0.752941, 0.12549, 1 )
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="Bottom/MoneyContainer"]
margin_left = 16.0
margin_top = 2.0
margin_right = 48.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "9999"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyButton" type="Control" parent="Bottom"]
margin_left = 48.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Bottom/EnemyButton"]
margin_left = 8.0
margin_right = 24.0
margin_bottom = 16.0
texture_normal = SubResource( 2 )
texture_disabled = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceLabel" type="Label" parent="Bottom/EnemyButton"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "300"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Bottom/EnemyButton/TextureButton" to="." method="_on_TextureButton_pressed"]
